arrangement div size et suppression dossier img

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <h1>Meteo API</h1>
     <div class="moveDiv">
     <div class="search-box">
-        <button class="btn-search"><i class="fas fa-search"></i></button>
+        <button class="btn-search-one"><i class="fas fa-search"></i></button>
+        <button class="btn-search-two"><i class="fas fa-search"></i></button>
         <input type="text" class="input-search" placeholder="Entrer un Lieu...">
       </div>
     </div>
